# mperf-libpfm4

./: BUILD  CMakeLists.txt  README
include/perfmon/: pfmlib.h
lib/: pfmlib_arm_armv6.c  pfmlib_arm_armv7_pmuv1.c  pfmlib_arm_armv8.c  pfmlib_arm_priv.h  pfmlib_common.c  pfmlib_priv.h
lib/events/: arm_1136_events.h  arm_cortex_a17_events.h  arm_cortex_a32_events.h  arm_cortex_a34_events.h  arm_cortex_a35_events.h  arm_cortex_a510_events.h  arm_cortex_a55_events.h  arm_cortex_a5_events.h  arm_cortex_a65_events.h  arm_cortex_a710_events.h  arm_cortex_a715_events.h  arm_cortex_a72_events.h  arm_cortex_a73_events.h  arm_cortex_a75_events.h  arm_cortex_a76_events.h  arm_cortex_a76ae_events.h  arm_cortex_a77_events.h  arm_cortex_a78_events.h  arm_cortex_a78c_events.h  arm_cortex_aX1_events.h  arm_cortex_r4_events.h  arm_cortex_r52_events.h  arm_cortex_r5_events.h  arm_cortex_r7_events.h  arm_cortex_r82_events.h  arm_cortex_r8_events.h  arm_cortex_x1_events.h  arm_cortex_x1c_events.h  arm_cortex_x2_events.h  arm_cortex_x3_events.h  arm_neoverse_e1_events.h  arm_neoverse_v1_events.h  arm_neoverse_v2_events.h  arm_rainier_events.h
